kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/version: 1.0.12-SNAPSHOT
    app.kubernetes.io/name: social-network-manager-backend
  name: social-network-manager-backend
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.12-SNAPSHOT
      app.kubernetes.io/name: social-network-manager-backend
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/version: 1.0.12-SNAPSHOT
        app.kubernetes.io/name: social-network-manager-backend
      namespace: social-network
    spec:
      containers:
        - name: social-network-manager-backend
          image: alejandrotrilla/social-network-manager-backend:1.0.12-SNAPSHOT
          imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: social-network-manager-backend
  namespace: social-network
spec:
  selector:
    app.kubernetes.io/version: 1.0.12-SNAPSHOT
    app.kubernetes.io/name: social-network-manager-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
