kubernetes/deployment-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: social-network-manager-ingress
  namespace: social-network
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: Content-Type
    nginx.ingress.kubernetes.io/cors-allow-methods: POST, GET, DELETE, PUT
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/cors-expose-headers: X-Custom-Header
    nginx.ingress.kubernetes.io/cors-max-age: "86400"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: alejandrotrilla.com.ar
      http:
        paths:
          - path: /social-network-manager-backend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: social-network-manager-backend
                port:
                  number: 8080
          - path: /social-network-manager-frontend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: social-network-manager-frontend
                port:
                  number: 80
